I edited the read me file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="Main">
 <div class= "item" id="Upper-part">
-    <div class="Background">
+    <div class="Buttons">
         <button id="Home">
             Home
         </button>
