I edited the read me file

--- a/index.html
+++ b/index.html
@@ -5,40 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-
     <title>Tobias Website</title>
 </head>
 <body>
 <div class="Main">
-<div class= "item" id="Upper-part">
-    <div class="Buttons">
-        <button id="Home">
-            Home
-        </button>
-        <button id="MyStory">
-            My Story
-        </button>
-        <button id="MyPassions">
-            My Passions
-        </button>
+    <div class="item" id="Upper-part">
+        <div class="Buttons">
+            <button id="Home">
+                Home
+            </button>
+            <button id="MyStory">
+                My Story
+            </button>
+            <button id="MyPassions">
+                My Passions
+            </button>
+        </div>
+    </div>
+    <div class="item" id="Main-part">
+        <div class="background-container">
+            <p id="Main-text">Hello, I'm Tobias,
+                a computer science student with a diverse background.
+                Born in Edinburgh, Scotland, to a German mother and Malawian father,
+                I spent my early years in Malawi before moving to Germany.
+                Currently, I'm pursuing my passion for technology as a computer science student.
+                Explore "My Story" and "My Passion" to learn more about my journey.</p>
+        </div>
+    </div>
+    <div class="item" id="Footer">
+        <p>Contact:</p>
+        <p>Email:tobiaschisi@gmail.com</p>
+        <p>LinkedIn:</p>
     </div>
 </div>
-<div class="item" id="Main-part">
-    <div class="background-container">
-    <p id="Main-text">Hello, I'm Tobias,
-        a computer science student with a diverse background.
-        Born in Edinburgh, Scotland, to a German mother and Malawian father,
-        I spent my early years in Malawi before moving to Germany.
-        Currently, I'm pursuing my passion for technology as a computer science student.
-        Explore "My Story" and "My Passion" to learn more about my journey.</p>
-    </div>
-</div>
-<div class="item" id="Footer">
-    <p>Contact:</p>
-    <p>Email:tobiaschisi@gmail.com</p>
-    <p>LinkedIn:</p>
-</div>
-</div>
-
+<script src="eventHandler.js"></script>
 </body>
 </html>
