Made script to navigate between different pages

--- a/myPassion.html
+++ b/myPassion.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="styleMyPassions.css">
+
+    <title>My Passions</title>
 </head>
 <body>
-
+<div class="item" id="Upper-part">
+    <div class="Buttons">
+        <button id="Home">
+            Home
+        </button>
+        <button id="MyStory">
+            My Story
+        </button>
+        <button id="MyPassions">
+            My Passions
+        </button>
+    </div>
+</div>
+<script src="eventHandler.js"></script>
 </body>
 </html>
