--- a/myStory.html
+++ b/myStory.html
@@ -9,6 +9,19 @@
     <title>My Story</title>
 </head>
 <body>
-
+<div class="item" id="Upper-part">
+    <div class="Buttons">
+        <button id="Home">
+            Home
+        </button>
+        <button id="MyStory">
+            My Story
+        </button>
+        <button id="MyPassions">
+            My Passions
+        </button>
+    </div>
+</div>
+<script src="eventHandler.js"></script>
 </body>
 </html>
